# cpp-project-template

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
inc/: main.hpp
src/: main.cpp
